--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -16,11 +16,31 @@ body {
   height: 100vw;
 }
 
+.clock {
+  width: 100vw;
+}
+
+h1 {
+  margin: 1rem;
+}
+
+button {
+  font-size: 0.9rem;
+  width: 7rem;
+  height: 3.5rem;
+  background-color: rgb(255, 255, 255);
+  border-radius: 2rem;
+  border: none;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  cursor: pointer;
+  margin-right: 10rem;
+  right: 2rem;
+}
+
 header,
 footer {
-  margin-top: 5em;
+  margin-top: 2em;
   padding: 2em;
-  width: 100vw;
   text-align: center;
   margin: auto;
 }
@@ -28,7 +48,7 @@ footer {
 .label,
 .digital-clock,
 .analogic {
-  width: 20em;
+  width: 10em;
   height: 1em;
   text-align: center;
   margin: auto;
@@ -77,9 +97,9 @@ footer {
   height: 10rem;
   top: -6rem;
   left: 10rem;
-  background-color: rgb(255, 8, 255);
+  background-color: black;
   transform-origin: bottom;
-  transform: rotate(90deg);
+  transform: rotate(0deg);
 }
 
 .seconds-pointer {
@@ -90,14 +110,14 @@ footer {
   left: 10rem;
   background-color: rgb(255, 0, 0);
   transform-origin: bottom;
-  transform: rotate(180deg);
+  transform: rotate(0deg);
 }
 
 .center {
   content: "";
   position: relative;
-  width: 0.2rem;
-  height: 0.2rem;
+  width: 0.3rem;
+  height: 0.3rem;
   left: 9.8rem;
   top: -16rem;
   border-style: solid;
@@ -107,15 +127,23 @@ footer {
 }
 
 /* ------------FLEXBOX------------ */
-.clock {
+.clock,
+header {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: flex-start;
+  align-content: center;
   flex-wrap: wrap;
 }
 
-header {
+h1 {
+  flex: 0.7;
+}
+
+.user-clock {
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
+  align-items: flex-start;
+  align-content: flex-end;
 }
